Fixing clicking on mobile attempt 1

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,11 @@ html, body {
   border-radius: 6px;
 }
 
+.clickable-div
+{
+     cursor: pointer;
+}
+
 .body {
   display: flex;
   align-items: center;
